# sifir-rs-sdk

./: .gitignore  Cargo.toml  README.md  rustylib.h
.cargo/: config.toml
btc/: Cargo.toml
btc/src/: lib.rs
btc/src/multi_sig/: mod.rs
logger/: Cargo.toml
logger/src/: lib.rs
sifir-android/: Cargo.toml  build.rs
sifir-android/app/: settings.gradle
sifir-android/app/app/: build.gradle
sifir-android/app/app/src/androidTest/java/com/sifir/sdk/: ExampleInstrumentedTest.kt
sifir-android/app/app/src/main/: AndroidManifest.xml
sifir-android/app/app/src/main/res/values/: strings.xml  themes.xml
sifir-android/app/app/src/main/res/values-night/: themes.xml
sifir-android/app/app/src/test/java/com/sifir/sdk/: ExampleUnitTest.kt
sifir-android/app/gradle/wrapper/: gradle-wrapper.properties
sifir-android/app/src/main/java/com/sifir/sdk/: H.java  InternalPointerMarker.java  JNIReachabilityFence.java  OwnedTorService.java  TorServiceParam.java
sifir-android/app/tor/: build.gradle  proguard-rules.pro
sifir-android/app/tor/src/androidTest/java/com/sifir/tor/: ExampleInstrumentedTest.java
sifir-android/app/tor/src/main/: AndroidManifest.xml
sifir-android/app/tor/src/main/java/com/sifir/tor/: DataObserver.java  DerivedBip39Xprvs.java  ElectrumSledWallet.java  HiddenServiceHandler.java  InternalPointerMarker.java  JNIReachabilityFence.java  OwnedTorService.java  TcpSocksStream.java  TorHiddenService.java  TorServiceParam.java
sifir-android/app/tor/src/test/java/com/sifir/tor/: ExampleUnitTest.java
sifir-android/scripts/: build.sh  build_aar_from_so.sh  build_cpp.sh  build_multi_so.sh  copy.sh
sifir-android/src/: lib.rs
sifir-android/src/ffi/: java_glue.rs  java_glue_in.rs  java_glue_in_btc.rs  java_glue_in_common.rs  java_glue_in_tor.rs
sifir-android/src/ffi_cpp/: java_glue.rs  java_glue_in_common.rs  java_glue_in_tor.rs
sifir-android/src/flapigen/: java_glue.in.rs  java_glue.rs  java_glue.rs.in  java_glue_in.rs  mod.rs
sifir-android/src/logger/: logger.rs
sifir-ios/: Cargo.toml  README.md  build.rs  cbindgen.toml  sifir-types.h
sifir-ios/output/: sifir-tor.h
sifir-ios/scripts/: build.sh  build_features_framework_copy_to_rn_bdk.sh  build_features_framework_ios.sh  build_for_ios.sh  build_multi_so.sh  into_framework.sh
sifir-ios/src/: lib.rs
sifir-ios/src/btc_ffi/: mod.rs
sifir-ios/src/tor_ffi/: mod.rs
sifir-ios/src/util/: mod.rs
src/: build.rs  lib.rs  main.rs
src/tor/: mod.rs
src/tor2/: mod.rs
tor/: Cargo.toml
tor/examples/: hs_bind.rs
tor/src/: lib.rs
tor/src/hidden_service/: mod.rs
tor/src/tcp_stream/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
