[package]
name = "sifir-rs-sdk"
version = "0.1.0"
authors = ["gabidi <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10.8", features = ["socks", "json"] }
tokio = { version= "0.2", features = ["full"] }
libtor = { git = "https://github.com/Sifir-io/libtor.git"}


[lib]
path= "src/lib.rs"
name = "sifir_rs_sdk"
crate-type = ["staticlib", "cdylib"]
#crate-type = ["lib", "cdylib"]
