[package]
name = "sifir-rs-sdk"
version = "0.1.0"
authors = ["gabidi <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10.8", features = ["socks", "json"] }
tokio = { version= "0.2", features = ["full"] }
libtor = {version= "44.5.2+0.4.4.5", features=["vendored-openssl"]}
torut = { version = "0.1.6" , features=["vendored_openssl"] }
anyhow = "1.0.33"
serde = { version="1.0.117", features = ["derive"]}
futures = { version = "0.3.8" }

[dev-dependencies]
lazy_static = "1.4.0"

[lib]
path= "src/lib.rs"
name = "sifir_rs_sdk"
crate-type = ["staticlib", "cdylib"]
#crate-type = ["lib", "cdylib"]
