[package]
name = "btc"
version = "0.1.0"
authors = ["Gus <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.9.0",  features = ['all-keys','key-value-db'] }
rand = "0.8.0"
serde = "1.0.118"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0.24"
