[package]
name = "logger"
version = "0.1.0"
authors = ["g-homebase <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
log-panics = "2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.8.3"
