[package]
name = "sifir-android"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
btc_wallet =["btc"]
tor_daemon =["tor"]

[dependencies]
tor = { path = "../tor", optional = true }
btc= { path = "../btc", optional = true  }
jni = "0.18.0"
jni-sys = "0.3.0"
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.9.2"
serde = { version="1.0.117", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
flapigen = "0.6.0-pre7"

[lib]
crate-type = ["staticlib", "cdylib"]
