[package]
name = "sifir-android"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

[dependencies]
logger = { path = "../logger" }
tor = { path = "../tor" }
jni = "0.18.0"
jni-sys = "0.3.0"
serde = { version="1.0.117", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
flapigen = "0.6.0-pre7"

[lib]
crate-type = ["staticlib", "cdylib"]
