[package]
name = "sifir-ios"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tor = { path = "../tor" }
libc = "0.2.80"
serde = { version="1.0.117", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.17.0"
cargo-lipo = "3.1.1"

[lib]
# TODO can't build dylibs anymore ?
# error: cannot produce dylib for `sifir-ios v0.1.0 (/Users/ghassanabidi/Projects/sifir-rs-sdk/sifir-ios)` as the target `aarch64-apple-ios` does not support these crate types
crate-type = ["staticlib"]
# crate-type = ["staticlib","cdylib"]
