[package]
name = "sifir-ios"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

[features]
btc_wallet =["btc"]
tor_daemon =["tor"]

[dependencies]
tor = { path = "../tor", optional = true }
btc= { path = "../btc", optional = true  }
libc = "0.2.80"
serde = { version="1.0.117", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.17.0"
cargo-lipo = "3.1.1"

[lib]
crate-type = ["staticlib"]
#crate-type = ["cdylib"]
