[package]
name = "tor"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "0.3", features = ["net","rt","process","rt-multi-thread","time"] }
libtor = {git= "https://github.com/MagicalBitcoin/libtor.git", branch="update/tor-0.4.4.7", features=["vendored-openssl"]}
#libtor = {version= "44.6.1+0.4.4.6", features=["vendored-openssl"]}
torut = { version = "0.1.7", features=["control","v3","vendored_openssl"] }
#torut = { version = "0.1.6" , features=["vendored_openssl"] }
anyhow = "1.0.33"
serde = { version="1.0.117", features = ["derive"]}
lazy_static = "1.4.0"
futures = { version="0.3.8", default-features = false}
socks = { version = "0.3.3"}
base64 = "0.13.0"

[dev-dependencies]
serial_test = "*"
utils = { path = "../utils" }
tokio = { version= "0.3", features = ["net","rt","rt-multi-thread","process"] }


[[example]]
name = "hs_bind"
#required-features = ["cli-utils", "esplora"]
#[lib]
#crate-type = ["staticlib", "cdylib"]
#crate-type = ["lib", "cdylib"]
